2012-06-12  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_readascii):  Bugfix for label plots using column 0
	to generate text. E.g. plot foo using 1:2:(sprintf("%d",$0)) with labels

2012-06-09  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/fit.c (setvar):  Accept a double value instead of struct value.
	Use fill_gpval_float. Simplify callers.

	* src/fit.c (getivar, getdvar, creatdvar):  Use get_udv_by_name() or
	add_udv_by_name().

	* src/fit.c (fit_command):  Always initialize variables which might be
	set by user variables. This is necessary since user variables may be
	`undefine`d.

	* src/eval.c (real_int):  New function to retrieve an integer value
	from a user variable.

2012-06-07  Ethan A Merritt  <merritt@u.washington.edu>

	* src/tabulate.c:  Allow tabulation (set table) of pixel values for
	IMAGE RGBIMAGE RGBA_IMAGE.

2012-06-01  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (box_range_fiddling):
	Autoscaling + auto-boxwidth + log scale on x = fail.
	Bug #3529285

2012-05-30  Ethan A Merritt  <merritt@u.washington.edu>

	* term/pslatex.trm: More helpful error message if output filename
	is not acceptable.
	Bug #3529832

	* src/interpol.c (cp_implode): This routine was not preserving the z
	value (used as a weight by smooth acsplines) of input data points.
	Bug #3529621

	* src/plot2d.c (get_data) docs/gnuplot.doc:  Use unit weights for
	"smooth acsplines" if no separate column of weights is provided.

2012-05-25  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* docs/Makefile.am (gnuplot.ms, figures, gnuplot.tex)
	(gnuplot.hlp, gnuplot.gih, allgih, gnuplot.texi, gnuplot.ipf)
	(gnuplot.rtf, check): Re-enable out-of-source-tree builds.
	(doc2ms_SOURCES): Remove duplicate source file.
	(doc2ms): Remove rule that would conflict with automake generated
	one.

2012-05-24  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgraph.c: Recreate fonts after resizing the graph window.